@@ -1,3 +1,8 @@
+2010-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_multigraph):
+	new multigraph parameters: line-stack-X, line-alpha-X
+
 2010-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover.pm (discover):
